# mabby

./: .gitignore  .pre-commit-config.yaml  .pre-commit-sync.json  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  docs.yml
code_of_conduct/: index.html
contributing/: index.html
docs/: gen_ref_nav.py
docs/examples/: bernoulli_bandits.md  index.md
docs/source/: conf.py  index.rst  modules.rst
docs/source/_autosummary/: mabby.agent.Agent.rst  mabby.agent.rst  mabby.arms.Arm.rst  mabby.arms.BernoulliArm.rst  mabby.arms.GaussianArm.rst  mabby.arms.rst  mabby.bandit.Bandit.rst  mabby.bandit.rst  mabby.exceptions.AgentUsageError.rst  mabby.exceptions.SimulationUsageError.rst  mabby.exceptions.StatsUsageError.rst  mabby.exceptions.StrategyUsageError.rst  mabby.exceptions.rst  mabby.rst  mabby.simulation.Simulation.rst  mabby.simulation.rst  mabby.stats.AgentStats.rst  mabby.stats.Metric.rst  mabby.stats.MetricMapping.rst  mabby.stats.SimulationStats.rst  mabby.stats.rst  mabby.strategies.rst  mabby.strategies.semi_uniform.EpsilonGreedyStrategy.rst  mabby.strategies.semi_uniform.RandomStrategy.rst  mabby.strategies.semi_uniform.SemiUniformStrategy.rst  mabby.strategies.semi_uniform.rst  mabby.strategies.strategy.Strategy.rst  mabby.strategies.strategy.rst  mabby.strategies.ts.BetaTSStrategy.rst  mabby.strategies.ts.rst  mabby.strategies.ucb.UCB1Strategy.rst  mabby.strategies.ucb.rst  mabby.utils.random_argmax.rst  mabby.utils.rst
examples/: bernoulli_bandit.py  bernoulli_bandits.ipynb  bernoulli_bandits.py  index.html
examples/bernoulli_bandits/: index.html
license/: index.html
mabby/: __init__.py  __main__.py  agent.py  agents.py  arms.py  bandit.py  bandits.py  exceptions.py  simulation.py  stats.py  strategies.py  utils.py
mabby/core/: __init__.py  agent.py  arms.py  bandit.py  exceptions.py  simulation.py
mabby/simulation/: __init__.py  agent.py  arms.py  bandit.py  exceptions.py  simulation.py  stats.py
mabby/strategies/: __init__.py  exceptions.py  semi_uniform.py  strategy.py  thompson.py  ts.py  ucb.py
reference/: SUMMARY.txt  index.html
reference/agent/: index.html
reference/arms/: index.html
reference/bandit/: index.html
reference/exceptions/: index.html
reference/simulation/: index.html
reference/stats/: index.html
reference/strategies/: index.html
reference/strategies/semi_uniform/: index.html
reference/strategies/strategy/: index.html
reference/strategies/thompson/: index.html
reference/strategies/ucb/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_arms.py  test_bandits.py  test_sims.py
tests/integration/: test_simulation.py
tests/unit/: conftest.py  test_agent.py  test_agents.py  test_arms.py  test_bandit.py  test_bandits.py  test_simulation.py  test_stats.py  test_strategies.py  test_utils.py
