[tool.poetry]
name = "mabby"
version = "0.1.1"
description = "A multi-armed bandit (MAB) simulation library"
authors = ["Ethan Wu <ew2664@columbia.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
mdformat = "^0.7.16"
mdformat-gfm = "^0.3.5"
mdformat-black = "^0.1.1"
mdformat-frontmatter = "^2.0.1"
mdformat-footnote = "^0.1.1"
mypy = "^1.0.1"
ruff = "^0.0.252"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pyproject-fmt = "^0.9.1"
pytest-randomly = "^3.12.0"
pytest-xdist = "^3.2.0"

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "D", "UP", "B", "Q", "SIM", "NPY", "RUF", "C90"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
"mabby/strategies/*" = ["D"] # remove later

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
