[tool.poetry]
name = "mabby"
version = "0.1.2"
description = "A multi-armed bandit (MAB) simulation library"
authors = ["Ethan Wu <ew2664@columbia.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
overrides = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = {extras = ["jupyter"], version = "^23.3.0"}
mdformat = "^0.7.16"
mdformat-black = "^0.1.1"
mdformat-mkdocs = {extras = ["recommended"], version = "^1.0.0"}
mypy = "^1.0.1"
ruff = "^0.0.260"
pyproject-fmt = "^0.9.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-randomly = "^3.12.0"
pytest-xdist = "^3.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.1.5"
mkdocs-literate-nav = "^0.6.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
pymdown-extensions = "^9.10"
markdown-callouts = "^0.3.0"
markdown-include = "^0.8.1"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "D", "UP", "B", "Q", "SIM", "NPY", "RUF", "C90"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
"docs/*" = ["D"]
"examples/*" = ["D"]

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["overrides.override"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
